# lend-book

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/lend_book/: __init__.py  manager.py
src/lend_book/models/: book_model.py  user_model.py  user_normal_model.py  user_premium_model.py
src/lend_book/utils/: exceptions.py
test/test_models/: test_book.py
tests/: test_manager.py
